# clean-code-rust-actixweb-postgresql

./: .env  Cargo.toml  README.md  SQL Postgre untuk membuat tabel di postgresql.txt
src/: main.rs
src/config/: database.rs
src/handlers/: car.rs
src/models/: car.rs  errors.rs  mod.rs
src/repositories/: car.rs
src/routes/: car.rs  mod.rs
src/services/: car.rs
