[package]
name = "bayar-mobil"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"]}
dotenv = "0.15.0"
log = "0.4.25"
rust_decimal = { version = "1.36.0", features = ["serde"]}
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "rust_decimal"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.13.1", features = [ "serde","v4"] }

